--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -1,102 +1,112 @@
 * 1 為保障著作人著作權益，調和社會公共利益，促進國家文化發展，特制定本法。本法未規定者，適用其他法律之規定。
 
-* 2 本法所稱主管機關為內政部。內政部得設著作權局，執行著作權行政事務；其組織，另以法律定之。
+* 2 本法所稱主管機關為內政部。
 
-* 3 本法用詞定義如左：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。在家庭及其家居生活以外聚集多數人之場所之人，亦屬之。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法有形之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作內容。七、公開播送：指基於公眾接收訊息為目的，以有線電、無線電或其他器材，藉聲音或影像向公眾傳達著作內容。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。十、公開展示：指向公眾展示著作原件。十一、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十二、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十三、發行：指權利人重製並散布能滿足公眾合理需要之重製物。十四、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
+* 3 本法用詞定義如下：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。但家庭及其正常社交之多數人，不在此限。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法有形之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作用容。七、公開播送：指基於公眾接收訊息為目的，以有線電、無線電或其他器材，藉聲音或影像向公眾傳達著作內容。由原播送人以外之人，以有線電或無線電將原播送之聲音或影像向公眾傳達者，亦屬之。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法於同一時間向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。以擴音器或其他器材，將原播送之聲音或影像向公眾傳達者，亦屬之。十、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十一、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十二、發行：指權利人散布能滿足公眾合理需要之重製物。十三、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。十四、原件：指著作首次附著之物。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
 
-* 4 外國人之著作合於左列情形之一者，得依本法享有著作權。但條約或協定另有約定，經立法院議決通過者，從其約定。一、於中華民國管轄區域內首次發行，或於中華民國管轄區域外首次發行後三十日內在中華民國管轄區域內發行者。但以該外國人之本國，對中華民國人之著作，在相同之情形下，亦予保護且經查證屬實者為限。二、依條約、協定或其本國法令、慣例，中華民國人之著作得在該國享有著作權者。
+* 4 外國人之著作合於下列情形之一者，得依本法享有著作權。但條約或協定另有約定，經立法院議決通過者，從其約定：一、於中華民國管轄區域內首次發行，或於中華民國管轄區域外首次發行後三十日內在中華民國管轄區域內發行者。但以該外國人之本國，對中華民國人之著作，在相同之情形下，亦予保護且經查證屬實者為限。二、依條約、協定或其本國法令、慣例，中華民國人之著作得在該國享有著作權者。
 
-* 5 本法所稱著作，例示如左：一、語文著作。二、音樂著作。三、戲劇、舞蹈著作。四、美術著作。五、攝影著作。六、圖形著作。七、視聽著作。八、錄音著作。九、建築著作。十、電腦程式著作。前項各款著作例示內容，由主管機關定之。
+* 5 本法所稱著作，例示如下：一、語文著作。二、音樂著作。三、戲劇、舞蹈著作。四、美術著作。五、攝影著作。六、圖形著作。七、視聽著作。八、錄音著作。九、建築著作。十、電腦程式著作。前項各款著作例示內容，由主管機關訂定之。
 
 * 6 就原著作改作之創作為衍生著作，以獨立之著作保護之。衍生著作之保護，對原著作之著作權不生影響。
 
-* 7 就資料之選擇及編排具有創作性者為編輯著作，以獨立之著作保護之。編輯著作之保護，對其所收編著作之著作權不生影響。
+* 7 就資料之選擇及編排具有創作性者為編緝著作，以獨立之著作保護之。編輯著作之保護，對其所收編著作之著作權不生影響。
+
+* 7.1 表演人對既有著作之表演，以獨立之著作保護之。表演之保護，對原著作之著作權不生影響。
 
 * 8 二人以上共同完成之著作，其各人之創作，不能分離利用者，為共同著作。
 
-* 9 左列各款不得為著作權之標的：一、憲法、法律、命令或公文。二、中央或地方機關就前款著作作成之翻譯物或編輯物。三、標語及通用之符號、名詞、公式、數表、表格、簿冊或時曆。四、單純為傳達事實之新聞報導所作成之語文著作。五、依法令舉行之各類考試試題。
+* 9 下列各款不得為著作權之標的：一、憲法、法律、命令或公文。二、中央或地方機關就前款著作作成之翻譯物或編輯物。三、標語及通用之符號、名詞、公式、數表、表格、簿冊或時曆。四、單純為傳達事實之新聞報導所作成之語文著作。五、依法令舉行之各類考試試題及其備用試題。前項第一款所稱公文，包括公務員於職務上草擬之文告、講稿、新聞稿及其他文書。
 
-* 10 在著作之原件或其已發行之重製物上，或將著作公開發表時，以通常之方法表示著作人之本名或眾所周知之別名者，推定為該著作之著作人。前項規定，於著作發行日期、地點之推定，準用之。
+* 10 著作人於著作完成時享有著作權。但本法另有規定者，從其規定。
 
-* 11 法人之受雇人，在法人之企劃下，完成其職務上之著作，以該受雇人為著作人。但契約約定以法人或其代表人為著作人者，從其約定。
+* 10.1 依本法取得之著作權，其保護僅及於該著作之表達，而不及於其所表達之思想、程序、製程、系統、操作方法、概念、原理、發現。
 
-* 12 受聘人在出資人之企劃下完成之著作，除前條情形外，以該受聘人為著作人。但契約約定以出資人或其代表人為著作人者，從其約定。
+* 11 受雇人於職務上完成之著作，以該受雇人為著作人。但契約約定以雇用人為著作人者，從其約定。依前項規定，以受雇人為著作人者，其著作財產權歸雇用人享有。但契約約定其著作財產權歸受雇人享有者，從其約定。前二項所稱受雇人，包括公務員。
 
-* 13 著作人於著作完成時享有著作權。
+* 12 出資聘請他人完成之著作，除前條情形外，以該受聘人為著作人。但契約約定以出資人為著作人者，從其約定。依前項規定，以受聘人為著作人者，其著作財產權依契約約定歸受聘人或出資人享有。未約定著作財產權之歸屬者，其著作財產權歸受聘人享有。依前項規定著作財產權歸受聘人享有者，出資人得利用該著作。
 
-* 14 第十條第一項規定，於著作財產權人之推定，準用之。
+* 13 在著作之原件或其已發行之重製物上，或將著作公開發表時，以通常之方法表示著作人之本名或眾所周知之別名者，推定為該著作之著作人。前項規定，於著作發行日期、地點及著作財產權人之推定，準用之。
 
-* 15 著作人就其著作享有公開發表之權利。有左列情形之一者，推定著作人同意公開發表其著作：一、著作人將其尚未公開發表著作之著作財產權讓與他人或授權他人利用時，因著作財產權之行使或利用而公開發表者。二、著作人將其尚未公開發表之美術著作或攝影著作之著作原件讓與他人，受讓人以其著作原件公開展示者。三、依學位授予法撰寫之碩士、博士論文，著作人已取得學位者。四、視聽著作之製作人依第三十八條規定利用該視聽著作而公開發表者。
+* 14 （刪除）
 
-* 16 著作人於著作之原件或其重製物上或於著作公開發表時，有表示其本名、別名或不具名之權利。著作人就其著作所生之衍生著作，亦有相同之權利。利用著作之人，得使用自己之封面設計，並加冠設計人或主編之姓名或名稱。但著作人有特別表示或違反社會使用慣例者，不在此限。依著作利用之目的及方法，於著作人之利益無損害之虞，且不違反社會使用慣例者，得省略著作人之姓名或名稱。
+* 15 著作人就其著作享有公開發表之權利。但公務員，依第十一條及第十二條規定為著作人，而著作財產權歸該公務員隸屬之法人享有者，不適用之。有下列情形之一者，推定著作人同意公開發表其著作：一、著作人將其尚未公開發表著作之著作財產權讓與他人或授權他人利用時，因著作財產權之行使或利用而公開發表者。二、著作人將其尚未公開發表之美術著作或攝影著作之著作原件或其重製物讓與他人，受讓人以其著作原件或其重製物公開展示者。三、依學位授予法撰寫之碩士、博士論文，著作人已取得學位者。依第十一條第二項及第十二條第二項規定，由雇用人或出資人自始取得尚未公開發表著作之著作財產權者，因其著作財產權之讓與、行使或利用而公開發表者，視為著作人同意公開發表其著作。前項規定，於第十二條第三項準用之。
 
-* 17 著作人有保持其著作之內容、形式及名目同一性之權利。但有左列情形之一者，不適用之：一、依第四十七條規定為教育目的之利用，在必要範圍內所為之節錄、用字、用語之變更或其他非實質內容之改變。二、為使電腦程式著作，適用特定之電腦，或改正電腦程式設計明顯而無法達成原來著作目的之錯誤，所為必要之改變。三、建築物著作之增建、改建、修繕或改塑。四、其他依著作之性質、利用目的及方法所為必要而非實質內容之改變。
+* 16 著作人於著作之原件或其重製物上或於著作公開發表時，有表示其本名、別名或不具名之權利。著作人就其著作所生之衍生著作，亦有相同之權利。前條第一項但書規定，於前項準用之。利用著作之人，得使用自己之封面設計，並加冠設計人或主編之姓名或名稱。但著作人有特別表示或違反社會使用慣例者，不在此限。依著作利用之目的及方法，於著作人之利益無損害之虞，且不違反社會使用慣例者，得省略著作人之姓名或名稱。
+
+* 17 著作人享有禁止他人以歪曲、割裂、竄改或其他方法改變其著作之內容、形式或名目致損害其名譽之權利。
 
 * 18 著作人死亡或消滅者，關於其著作人格權之保護，視同生存或存續，任何人不得侵害。但依利用行為之性質及程度、社會之變動或其他情事可認為不違反該著作人之意思者，不構成侵害。
 
-* 19 共同著作之著作人格權，非經著作人全體同意，不得行使之。各著作人，無正當理由者，不得拒絕同意。共同著作之著作人，得於著作人中選定代表人行使著作人格權。對於前項代表人之代表權所加限制，不得對抗善意第三人。
+* 19 共同著作之著作人格權，非經著作人全體同意，不得行使之。各著作人無正當理由者，不得拒絕同意。共同著作之著作人，得於著作人中選定代表人行使著作人格權。對於前項代表人之代表權所加限制，不得對抗善意第三人。
 
 * 20 未公開發表之著作原件及其著作財產權，除作為買賣之標的或經本人允諾者外，不得作為強制執行之標的。
 
 * 21 著作人格權專屬於著作人本身，不得讓與或繼承。
 
-* 22 著作人專有重製其著作之權利。
+* 22 著作人除本法另有規定外，專有重製其著作之權利。著作人專有以錄音、錄影或攝影重製其表演之權利。
 
 * 23 著作人專有公開口述其語文著作之權利。
 
-* 24 著作人專有公開播送其著作之權利。
+* 24 著作人專有公開播送其著作之權利。但將表演重製或公開播送後再公開播送者，不在此限。
 
 * 25 著作人專有公開上映其視聽著作之權利。
 
-* 26 著作人專有公開演出其語文、音樂或戲劇、舞蹈著作之權利。
+* 26 著作人除本法另有規定外，專有公開演出其語文、音樂或戲劇、舞蹈著作之權利。著作人專有以擴音器或其他器材公開演出其表演之權利。但將表演重製或公開播送後再以擴音器或其他器材公開演出者，不在此限。
 
-* 27 著作人專有對其未發行之美術著作或攝影著作公開展示其著作原件之權利。
+* 27 著作人專有公開展示其未發行之美術著作或攝影著作之權利。
 
-* 28 著作人專有將其著作改作成衍生著作或編輯成編輯著作之權利。
+* 28 著作人專有將其著作改作成衍生著作或編輯成編輯著作之權利。但表演不適用之。
 
-* 29 著作人專有出租其著作之權利。
+* 29 著作人專有出租其著作之權利。但表演不適用之。
 
-* 30 著作財產權，除本法另有規定外，存續於著作人生存期間及其死亡後五十年。著作於著作人死亡後四十年至五十年間首次公開發表者，著作財產權之期間，自公開發表時起存續十年。
+* 29.1 依第十一條第二項或第十二條第二項規定取得著作財產權之雇用人或出資人，專有第二十二條至第二十九條規定之權利。
+
+* 30 著作財產權，除本法另有規定外，存續於著作人之生存期間及其死亡後五十年。著作於著作人死亡後四十年至五十年間首次公開發表者，著作財產權之期間，自公開發表時起存續十年。
 
 * 31 共同著作之著作財產權，存續至最後死亡之著作人死亡後五十年。
 
-* 32 別名著作或不具名著作之著作財產權，存續至著作公開發表後五十年。但可證明其著作人死亡已逾五十年者，其著作財產權消滅。有左列情形之一者，不適用前項規定：一、著作人之別名為眾所周知者。二、於前項期間內，依第七十四條規定為著作人本名之登記者。
+* 32 別名著作或不具名著作之著作財產權，存續至著作公開發表後五十年。但可證明其著作人死亡已逾五十年者，其著作財產權消滅。前項規定，於著作人之別名為眾所周知者，不適用之。
 
-* 33 法人為著作人之著作，其著作財產權存續至其著作公開發表後五十年。但著作在創作完成時起算十年內未公開發表者，其著作財產權存續至創作完成時起五十年。
+* 33 法人為著作人之著作，其著作財產權存續至其著作公開發表後五十年。但著作在創作完成時起算五十年內未公開發表者，其著作財產權存續至創作完成時起五十年。
 
-* 34 攝影、視聽、錄音及電腦程式著作之著作財產權存續至著作公開發表後五十年。前條但書規定，於前項準用之。
+* 34 攝影、視聽、錄音、電腦程式及表演之著作財產權存續至著作公開發表後五十年。前條但書規定，於前項準用之。
 
 * 35 第三十條至第三十四條所定存續期間，以該期間屆滿當年之末日為期間之終止。繼續或逐次公開發表之著作，依公開發表日計算著作財產權存續期間時，如各次公開發表能獨立成一著作者，著作財產權存續期間自各別公開發表日起算。如各次公開發表不能獨立成一著作者，以能獨立成一著作時之公開發表日起算。前項情形，如繼續部分未於前次公開發表日後三年內公開發表者，其著作財產權存續期間自前次公開發表日起算。
 
-* 36 著作財產權得全部或部分讓與他人或與他人共有。著作財產權讓與之範圍依當事人之約定；其約定不明之部分，推定為未讓與。各類著作財產權之讓與價格及使用報酬，不得低於主管機關公告之標準。主管機關每年應依國民所得額之成長幅度適時調整。
+* 36 著作財產權得全部或部分讓與他人或與他人共有。著作財產權之受讓人，在其受讓範圍內，取得著作財產權。著作財產權讓與之範圍依當事人之約定；其約定不明之部分，推定為未讓與。
 
-* 37 著作財產權人得授權他人利用其著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。
+* 37 著作財產權人得授讓他人利用著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。
 
-* 38 視聽著作之製作人所為之重製、公開播送、公開上映、附加字幕或變換配音，得不經著作人之同意。但契約另有約定者，從其約定。
+* 38 （刪除）
 
 * 39 以著作財產權為質權之標的物者，除設定時另有約定外，著作財產權人得行使其著作財產權。
 
-* 40 共同著作之著作財產權，非經著作人全體同意，不得行使之；各著作人非經其他共同著作人之同意，不得以其應有部分讓與他人或為他人設定質權。各著作人，無正當理由者，不得拒絕同意。共同著作各著作人之應有部分，依共同著作人間之約定定之；無約定者，依各著作人參與創作之程度定之。各著作人參與創作之程度不明時，推定為均等。共同著作之著作人拋棄其應有部分者，其應有部分由其他共同著作人依其應有部分之比例分享之。前項規定，於共同著作之著作人死亡無繼承人或消滅後無承受人者，準用之。共同著作之著作人，得於著作人中選定代表人行使著作財產權。對於代表人之代表權所加限制，不得對抗善意第三人。前五項之規定，於因其他關係成立之共有著作財產權，準用之。
+* 40 共同著作各著作人之應有部分，依共同著作人間之約定定之；無約定者，依各著作人參與創作之程度定之。各著作人參與創作之程度不明時，推定為均等。共同著作之著作人拋棄其應有部分者，其應有部分由其他共同著作人依其應有部分之比例分享之。前項規定，於共同著作之著作人死亡無繼承人或消滅後無承受人者，準用之。
 
-* 41 著作人投稿於新聞紙、雜誌或授權公開播送其著作者，除另有約定外，推定著作人僅授與刊載或公開播送一次之權利，對著作人之其他權利不生影響。
+* 40.1 共有之著作財產權，非經著作財產權人全體同意，不得行使之；各著作財產權人非經其他共有著作財產權人之同意，不得以其應有部分讓與他人或為他人設定質權。各著作財產權人，無正當理由者，不得拒絕同意。共有著作財產權人，得於著作財產權人中選定代表人行使著作財產權。對於代表人之代表權所加限制，不得對抗善意第三人。前條第二項及第三項規定，於共有著作財產權準用之。
 
-* 42 著作財產權因存續期間屆滿而消滅。於存續期間內，有左列情形之一者，亦同：一、著作財產權人死亡，其著作財產權依法應歸屬國庫者。二、著作財產權人為法人，於其消滅後，其著作財產權依法應歸屬於地方自治團體者。
+* 41 著作財產權人投稿於新聞紙、雜誌或授權公開播送著作者，除另有約定外，推定僅授與刊載或公開播送一次之權利，對著作財產權人之其他權利不生影響。
+
+* 42 著作財產權因存續期間屆滿而消滅。於存續期間內，有下列情形之一者，亦同：一、著作財產權人死亡，其著作財產權依法應歸屬國庫者。二、著作財產權人為法人，於其消滅後，其著作財產權依法應歸屬於地方自治團體者。
 
 * 43 著作財產權消滅之著作，除本法另有規定外，任何人均得自由利用。
 
-* 44 立法或行政機關，因立法或行政目的所需，認有必要將他人著作列為內部參考資料時，在合理範圍內，得重製他人之著作。但依該著作之種類、用途及其重製物之數量、方法，有害於著作財產權人之利益或係電腦程式著作者，不在此限。
+* 44 中央或地方機關，因立法或行政目的所需，認有必要將他人著作列為內部參考資料時，在合理範圍內，得重製他人之著作。但依該著作之種類、用途及其重製物之數量、方法，有害於著作財產權人之利益者，不在此限。
 
 * 45 專為司法程序使用之必要，在合理範圍內，得重製他人之著作。前條但書規定，於前項情形準用之。
 
 * 46 依法設立之各級學校及其擔任教學之人，為學校授課需要，在合理範圍內，得重製他人已公開發表之著作。第四十四條但書規定，於前項情形準用之。
 
-* 47 依法設立之各級學校或教育機構及其擔任教學之人，為教育目的之必要，在合理範圍內，得公開播送他人已公開發表之著作，或將其揭載於教育行政機關審定之教科書或教師手冊中。但依著作之種類、用途及其公開播送或揭載之方法，有害於著作財產權人之利益者，不在此限。
+* 47 為編製依法令應經教育行政機關審定之教科用書，或教育行政機關編製教科用書者，在合理範圍內，得重製、改作或編輯他人已公開發表之著作。前項規定，於編製附隨於該教科用書且專供教學之人教學用之輔助用品，準用之。但以由該教科用書編製者編製為限。依法設立之各級學校或教育機構，為教育目的之必要，在合理範圍內，得公開播送他人已公開發表之著作。前三項情形，利用人應將利用情形通知著作財產權人並支付使用報酬。使用報酬率，由主管機關定之。
 
-* 48 供公眾使用之圖書館、博物館、歷史館、科學館、藝術館或其他文教機構，於左列情形之一，得就其收藏之著作重製之：一、應閱覽人供個人研究之要求，重製已公開發表著作之一部分或期刊中之單篇著作，每人以一份為限。二、基於保存資料之必要者。三、就絕版或難以購得之著作，應同性質機構之要求者。
+* 48 供公眾使用之圖書館、博物館、歷史館、科學館、藝術館或其他文教機構，於下列情形之一，得就其收藏之著作重製之：一、應閱覽人供個人研究之要求，重製已公開發表著作之一部分，或期刊或已公開發表之研討會論文集之單篇著作，每人以一份為限。二、基於保存資料之必要者。三、就絕版或難以購得之著作，應同性質機構之要求者。
+
+* 48.1 中央或地方機關、依法設立之教育機構或供公眾使用之圖書館，得重製下列已公開發表之著作所附之摘要：一、依學位授予法撰寫之碩士、博士論文，著作人已取得學位者。二、刊載於期刊中之學術論文。三、已公開發表之研討會論文集或研究報告。
 
 * 49 以廣播、攝影、錄影、新聞紙或其他方法為時事報導者，在報導之必要範圍內，得利用其報導過程中所接觸之著作。
 
-* 50 以中央或地方機關或公法人名義公開發表之著作，得由新聞紙、雜誌轉載，或由廣播電臺或電視電臺公開播送。
+* 50 以中央或地方機關或公法人名義公開發表之著作，在合理範圍內，得重製或公開播送。
 
 * 50.1 著作已完成註冊於中華民國七十四年七月十日本法修正施行前，其著作權期間仍在存續中者，依本法所定期間計算其著作權期間。完成於中華民國七十四年七月十日本法修正施行前未經註冊取得著作權之著作，其發行未滿二十年者，於中華民國七十四年七月十日本法修正施行後適用本法之規定。但侵害行為之賠償及處罰，須該行為發生於本法修正施行後，始適用本法。中華民國七十四年七月十日本法修正增訂之著作，依中華民國七十四年七月十日本法修正所定期間，其著作權仍在存續中者，適用本法規定。但侵害行為之賠償及處罰，須該行為發生於本法增訂該著作後，始適用本法。
 
@@ -108,139 +118,153 @@
 
 * 53 已公開發表之著作，得為盲人以點字重製之。以增進盲人福利為目的，經主管機關許可之機構或團體，得以錄音、電腦或其他方式利用已公開發表之著作，專供盲人使用。
 
-> 釋：目前已有盲人電腦開發完成，未來嘉惠盲胞之新科技亦將增多，而「政府」二字亦定義太廣；為期能更週延及落實嘉惠盲胞美意，爰修正本條文第二項文字。
+* 54 中央或地方機關、依法設立之各級學校或教育機構辦理之各種考試，得重製已公開發表之著作，供為試題之用。但已公開發表之著作如為試題者，不適用之。
 
-* 54 政府、依法設立之各級學校或教育機構辦理之各種考試，得重製已公開發表之著作，供為試題之用。但已公開發表之著作如為試題者，不適用之。
+* 55 非以營利為目的，未對觀眾或聽眾直接或間接收取任何費用，且未對表演人支付報酬者，得於活動中公開口述、公開播送、公開上映或公開演出他人已公開發表之著作。
 
-* 55 非以營利為目的，未對觀眾或聽眾直接或間接收取任何費用，且未對表演人支付報酬者，得於公益性之活動中公開口述、公開播送、公開上映或公開演出他人已公開發表之著作。前項情形，利用人應支付使用報酬。使用報酬率，由主管機關定之。
+* 56 廣播或電視，為播送之目的，得以自己之設備錄音或錄影該著作。但以其播送業經著作財產權人之授權或合於本法規定者為限。前項錄製物除經主管機關核准保存於指定之處所外，應於錄音或錄影後一年內銷燬之。
 
-* 56 廣播電臺或電視電臺，為播送之目的，得以自己之設備錄音或錄影該著作。但以其播送業經著作財產權人之授權或合於本法規定者為限。前項錄製物之使用次數及保存期間，依當事人之約定。
+* 56.1 為加強收視效能，得以依法令設立之社區共同天線同時轉播依法設立無線電視臺播送之著作，不得變更其形式或內容。有線電視之系統經營者得提供基本頻道，同時轉播依法設立無線電視臺播送之著作，不得變更其形式或內容。
 
-* 57 美術著作或攝影著作之原件所有人或經其同意之人，得公開展示其原件。前項公開展示之人，為向參觀人解說其著作，得於說明書內重製其著作。
+* 57 美術著作或攝影著作原件或合法重製物之所有人或經其同意之人，得公開展示該著作原件或合法重製物。前項公開展示之人，為向參觀人解說著作，得於說明書內重製該著作。
 
-* 58 於街道、公園、建築物之外壁或其他向公眾開放之戶外場所長期展示之美術著作或建築著作，除左列情形外，得以任何方法利用之：一、以建築方式重製建築物。二、以雕塑方式重製雕塑物。三、為於本條規定之場所長期展示目的所為之重製。四、以販賣重製物為目的所為之重製。
+* 58 於街道、公園、建築物之外壁或其他向公眾開放之戶外場所長期展示之美術著作或建築著作，除下列情形外，得以任何方法利用之：一、以建築方式重製建築物。二、以雕塑方式重製雕塑物。三、為於本條規定之場所長期展示目的所為之重製。四、專門以販賣美術著作重製物為目的所為之重製。
 
 * 59 合法電腦程式著作重製物之所有人得因配合其所使用機器之需要，修改其程式，或因備用存檔之需要重製其程式。但限於該所有人自行使用。前項所有人因滅失以外之事由，喪失原重製物之所有權者，除經著作財產權人同意外，應將其修改或重製之程式銷燬之。
 
-* 60 合法著作重製物之所有人，得出租該重製物。但錄音及電腦程式著作之重製物，不適用之。
+* 60 合法著作重製物之所有人，得出租該重製物。但錄音及電腦程式著作之重製物，不適用之。附含於貨物、機器或設備之電腦程式著作重製物，隨同貨物、機器或設備合法出租且非該項出租之主要標的物者，不適用前項但書之規定。
 
-* 61 揭載於新聞紙、雜誌有關政治、經濟或社會上時事問題之論述，得由其他新聞紙、雜誌轉載或由廣播電臺或電視電臺公開播送。但經註明不許轉載或公開播送者，不在此限。
+* 61 揭載於新聞紙、雜誌有關政治、經濟或社會上時事問題之論述，得由其他新聞紙、雜誌轉載或由廣播或電視公開播送。但經註明不許轉載或公開播送者，不在此限。
 
 * 62 政治或宗教上之公開演說、裁判程序及中央或地方機關之公開陳述，任何人得利用之。但專就特定人之演說或陳述，編輯成編輯著作者，應經著作財產權人之同意。
 
-* 63 依第四十四條至第四十七條、第四十八條第一款、第四十九條至第五十五條、第六十一條及第六十二條規定利用他人著作者，得翻譯該著作。
+* 63 依第四十四條、第四十五條、第四十八條第一款、第四十八條之一至第五十條、第五十二條至第五十五條、第六十一條及第六十二條規定得利用他人著作者，得翻譯該著作。依第四十六條及第五十一條規定得利用他人著作者，得改作該著作。
 
-* 64 依第四十四條至第四十七條、第四十九條、第五十條、第五十二條、第五十三條、第五十五條、第五十七條、第五十八條、第六十條至第六十二條規定利用他人著作者，應明示其出處。前項明示出處，就著作人之姓名或名稱，除不具名著作或著作人不明者外，應以合理之方式為之。
+* 64 依第四十四條至第四十七條、第四十八條之一至第五十條、第五十二條、第五十三條、第五十五條、第五十七條、第五十八條、第六十條至第六十三條規定利用他人著作者，應明示其出處。前項明示出處，就著作人之姓名或名稱，除不具名著作或著作人不明者外，應以合理之方式為之。
 
-* 65 著作之利用是否合於第四十四條至第六十三條規定，應審酌一切情狀，尤應注意左列事項，以為判斷之標準：一、利用之目的及性質，包括係為商業目的或非營利教育目的。二、著作之性質。三、所利用之質量及其在整個著作所占之比例。四、利用結果對著作潛在市場與現在價值之影響。
+* 65 著作之合理使用，不構成著作財產權之侵害。著作之利用是否合於第四十四條至第六十三條規定或其他合理使用之情形，應審酌一切情狀，尤應注意下列事項，以為判斷之標準：一、利用之目的及性質，包括係為商業目的或非營利教育目的。二、著作之性質。三、所利用之質量及其在整個著作所占之比例。四、利用結果對著作潛在市場與現在價值之影響。
 
-* 66 第四十四條至第六十三條規定，對著作人之著作人格權不生影響。
+* 66 第四十四條至第六十三條及第六十五條規定，對著作人之著作人格權不生影響。
 
-* 67 著作首次發行滿一年，在大陸地區以外任何地區無中文翻譯本發行或其發行中文翻譯本已絕版者，欲翻譯之人，為教學、研究或調查之目的，有左列情形之一者，經申請主管機關許可強制授權，並給付使用報酬後，得翻譯並以印刷或類似之重製方式發行之：一、已盡相當努力，無法聯絡著作財產權人致不能取得授權者。二、曾要求著作財產權人授權而無法達成協議者。前項申請，主管機關應於提出申請九個月後始予許可；於九個月期間內，著作財產權人或其授權之人以通常合理價格發行中文翻譯本或原著作人將其著作重製物自流通中全部收回者，主管機關應不許可。
+* 67 （刪除）
 
-* 68 廣播電臺或電視電臺為專門使用於教育之目的或對特定行業專家傳播技術或科學研究之結果者，就其依前條規定所為之翻譯，得以錄音、錄影之方式公開播送並得授權其他廣播電臺或電視電臺以同一目的公開播送之。前項翻譯，不得以營利為目的而使用之。廣播電臺或電視電臺就為教育活動所發行之視聽著作內容予以翻譯者，準用前二項規定。
+* 68 （刪除）
 
-* 69 錄有音樂著作之銷售用錄音著作公開發行滿二年，欲利用該音樂著作錄製其他銷售用錄音著作之人，有第六十七條第一項各款規定情形之一者，經申請主管機關許可強制授權，並給付使用報酬後，得利用該音樂著作，另行錄製。
+* 69 錄有音樂著作之銷售用錄音著作發行滿六個月，欲利用該音樂著作錄製其他銷售用錄音著作者，經申請主管機關許可強制授權，並給付使用報酬後，得利用該音樂著作，另行錄製。前項申請許可強制授權及使用報酬之辦法，由主管機關定之。
 
-* 70 依前三條規定利用著作者，不得將其翻譯物或錄音著作之重製物銷售至中華民國管轄區域外。
+* 70 依前條規定利用音樂著作者，不得將其錄音著作之重製物銷售至中華民國管轄區域外。
 
-* 71 依第六十七條或第六十九條規定，取得強制授權之許可後，有左列情形之一者，主管機關應撤銷其許可：一、未依主管機關許可之方式利用著作者。二、強制授權許可後，發現其申請有虛偽情事者。
+* 71 依第六十九條規定，取得強制授權之許可後，有下列情形之一者，主管機關應撤銷其許可：一、未依主管機關許可之方式利用著作者。二、強制授權許可後，發現其申請有虛偽情事者。
 
-* 72 依第六十七條規定，取得強制授權之許可後，有左列情形之一者，主管機關應終止其許可：一、原著作著作財產權人或其授權之人，於中華民國管轄區域內，以通常合理之價格發行中文翻譯本且其內容與依強制授權許可發行之中文翻譯本內容大體相同。二、原著作人將其著作重製物自流通中全部收回。前項強制授權許可終止前，申請人已完成之重製物，得繼續銷售。
+* 72 （刪除）
 
-* 73 第六十七條及第六十九條規定之申請許可強制授權之辦法，由主管機關定之。
+* 73 （刪除）
 
-* 74 著作人或第八十六條規定之人，得向主管機關申請著作人登記。著作財產權人，得向主管機關申請登記其著作財產權、著作之首次公開發表日或首次發行日。
+* 74 （刪除）
 
-* 75 有左列情形之一者，非經登記，不得對抗第三人：一、著作財產權之讓與、專屬授權或處分之限制。二、以著作財產權為標的物之質權之設定、讓與、變更、消滅或處分之限制。但因混同、著作財產權或擔保債權之消滅而質權消滅者，不在此限。
+* 75 （刪除）
 
-* 76 主管機關應備置登記簿，記載前二條所為之登記事項，並刊登政府公報公告之。前項登記簿，任何人均得申請查閱或請求發給謄本。
+* 76 （刪除）
 
-* 77 有左列情形之一者，主管機關不受理登記：一、申請登記之標的不屬本法規定之著作者。二、依第七十四條第二項規定申請登記著作財產權，而其著作財產權已消滅者。三、著作依法應受審查，而未經該管機關審查核准者。四、著作經依法禁止出售或散布者。五、申請登記之事項虛偽者。
+* 77 （刪除）
 
-* 78 有左列情形之一者，主管機關應撤銷其登記：一、登記後發現有前條各款情形之一者。二、原申請人申請撤銷者。
+* 78 （刪除）
 
-* 79 無著作財產權或著作財產權消滅之中華民國人之文字著述或美術著作，經製版人就文字著述整理排印，或就美術著作原件影印首次發行，並依法登記者，製版人就其排印或影印之版面，專有以印刷或類似方式重製之權利。製版人之權利，自製版完成時起算存續十年。前項保護期間，以該期間屆滿當年之末日，為期間之終止。
+* 79 無著作財產權或著作財產權消滅之文字著述或美術著作，經製版人就文字著述整理印刷，或就美術著作原件以影印、印刷或類似方式重製首次發行，並依法登記者，製版人就其版面，專有以影印、印刷或類似方式重製之權利。製版人之權利，自製版完成時起算存續十年。前項保護期間，以該期間屆滿當年之末日，為期間之終止。第一項登記之辦法，由主管機關定之。
 
-* 80 第四十二條及第四十三條有關著作財產權消滅之規定、第四十四條至第四十九條、第五十一條、第五十二條、第五十四條、第六十四條及第六十五條關於著作財產權限制之規定及第七十五條至第七十八條關於著作財產權登記之規定，於製版權準用之。
+* 80 第四十二條及第四十三條有關著作財產權消滅之規定、第四十四條至第四十八條、第四十九條、第五十一條、第五十二條、第五十四條、第六十四條及第六十五條關於著作財產權限制之規定，於製版權準用之。
 
 * 81 著作財產權人為行使權利、收受及分配使用報酬，經主管機關之許可，得組成著作權仲介團體。前項團體之許可設立、組織、職權及其監督、輔導，另以法律定之。
 
-* 82 主管機關應設置著作權審議及調解委員會，辦理左列事項：一、第三十六條第三項、第五十五條第二項、第六十七條及第六十九條規定之最低讓與價格或使用報酬之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者，以告訴乃論之案件為限。
+* 82 主管機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定及著作權仲介團體所訂定使用報酬率之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者，以告訴乃論之案件為限。
 
 * 83 前條著作權審議及調解委員會之組織規程及有關爭議之調解辦法，由主管機關擬訂，報請行政院核定後發布之。
 
-* 84 著作權或製版權之權利人對於侵害其權利者，得請求排除之，有侵害之虞者，得請求防止之。著作權或製版權之權利人，為前項請求時，對於侵害行為作成之物或專供侵害所用之物，得請求銷燬或為其他必要之處置。
+* 84 著作權人或製版權人對於侵害其權利者，得請求排除之，有侵害之虞者，得請求防止之。
 
 * 85 侵害著作人格權者，負損害賠償責任。雖非財產上之損害，被害人亦得請求賠償相當之金額。前項侵害，被害人並得請求表示著作人之姓名或名稱、更正內容或為其他回復名譽之適當處分。
 
-* 86 著作人死亡後，除其遺囑另有指定外，左列之人，依順序對於違反第十八條或有違反之虞者，得依第八十四條及前條第二項規定，請求救濟：一、配偶。二、子女。三、父母。四、孫子女。五、兄弟姊妹。六、祖父母。
+* 86 著作人死亡後，除其遺囑另有指定外，下列之人，依順序對於違反第十八條或有違反之虞者，得依第八十四條及前條第二項規定，請求救濟：一、配偶。二、子女。三、父母。四、孫子女。五、兄弟姊妹。六、祖父母。
 
-* 87 有左列情形之一者，除本法另有規定外，視為侵害著作權或製版權：一、以侵害著作人名譽之方法利用其著作者。二、明知為侵害著作權或製版權之物而散布或意圖散布而陳列或持有或意圖營利而交付者。三、輸入未經著作財產權人或製版權人授權重製之重製物或製版物者。四、未經著作財產權人同意而輸入著作原件或其重製物者。五、明知係侵害電腦程式著作財產權之重製物而仍作為直接營利之使用者。
+* 87 有下列情形之一者，除本法另有規定外，視為侵害著作權或製版權：一、以侵害著作人名譽之方法利用其著作者。二、明知為侵害著作權或製版權之物而散布或意圖散布而陳列或持有或意圖營利而交付者。三、輸入未經著作財產權人或製版權人授權重製之重製物或製版物者。四、未經著作財產權人同意而輸入著作原件或其重製物者。五、明知係侵害電腦程式著作財產權之重製物而仍作為直接營利之使用者。
 
-> 釋：為加強保護著作財產權人及製版權人之權益，以擬制之立法體例，於第三款明定輸入未經授權重製之重製物或製版物者，視為侵害；另亦增列第四款明定未經著作財產權人同意而輸入著作原件或其重製物者，亦視為侵害。第四款之修正即間接賦予著作財產權人專屬輸入權。
+* 87.1 有下列情形之一者，前條第四款之規定，不適用之：一、為供中央或地方機關之利用而輸入。但為供學校或其他教育機構之利用而輸入或非以保存資料之目的而輸入視聽著作原件或其重製物者，不在此限。二、為供非營利之學術、教育或宗教機構保存資料之目的而輸入視聽著作原件或一定數量重製物，或為其圖書館借閱或保存資料之目的而輸入視聽著作以外之其他著作原件或一定數量重製物，並應依第四十八條規定利用之。三、為供輸入者個人非散布之利用或屬入境人員行李之一部分而輸入著作原件或一定數量重製物者。四、附含於貨物、機器或設備之著作原件或其重製物，隨同貨物、機器或設備之合法輸入而輸入者，該著作原件或其重製物於使用或操作貨物、機器或設備時不得重製。五、附屬於貨物、機器或設備之說明書或操作手冊，隨同貨物、機器或設備之合法輸入而輸入者。但以說明書或操作手冊為主要輸入者，不在此限。前項第二款及第三款之一定數量，由主管機關另定之。
 
-* 87.1 有左列情形之一者，前條第四款之規定，不適用之：一、為供中央或地方機關之利用而輸入。但為供學校或其他教育機構之利用而輸入或非以保存資料之目的而輸入視聽著作原件或其重製物者，不在此限。二、為供非營利之學術、教育或宗教機構保存資料之目的而輸入視聽著作原件或一定數量重製物，或為其圖書館借閱或保存資料之目的而輸入視聽著作以外之其他著作原件或一定數量重製物，並應依第四十八條規定利用之。三、為供輸入者個人非散布之利用或屬入境人員行李之一部分而輸入著作原件或一定數量重製物者。四、附含於貨物、機器或設備之著作原件或其重製物，隨同貨物、機器或設備之合法輸入而輸入者，該著作原件或其重製物於使用或操作貨物機器或設備時不得重製。五、附屬於貨物、機器或設備之說明書或操作手冊隨同貨物、機器或設備之合法輸入而輸入者。但以說明書或操作手冊為主要輸入者，不在此限。前項第二款及第三款之一定數量，由主管機關另定之。
+* 88 因故意或過失不法侵害他人之著作財產權或製版權者，負損害賠償責任。數人共同不法侵害者，連帶負賠償責任。前項損害賠償，被害人得依下列規定擇一請求：一、依民法第二百十六條之規定請求。但被害人不能證明其損害時，得以其行使權利依通常情形可得預期之利益，減除被侵害後行使同一權利所得利益之差額，為其所受損害。二、請求侵害人因侵害行為所得之利益。但侵害人不能證明其成本或必要費用時，以其侵害行為所得之全部收入，為其所得利益。依前項規定，如被害人不易證明其實際損害額，得請求法院依侵害情節，在新臺幣一萬元以上五十萬元以下酌定賠償額。如損害行為屬故意且情節重大者，賠償額得增至新臺幣一百萬元。
 
-> 釋：一、本條新增。二、緣前條第四款增列修正後間接賦予著作財產權人專屬輸入權，此或將對文教利用、資訊取得造成部分影響，為兼顧加強保護著作財產權人及減少對文教利用之影響，以達本法明定之立法宗旨，乃明定除外規定。三、第二項規定前項第二款及第三款輸入之一定數量，授權由主管機關定之。至於一定數量，第二款前者為一份，後者為五份以下，第三款為一份。
-
-* 88 因故意或過失不法侵害他人之著作財產權或製版權者，負損害賠償責任。數人共同不法侵害者，連帶負賠償責任。前項損害賠償，被害人得依左列規定擇一請求：一、依民法第二百十六條規定請求。但被害人不能證明其損害時，得以其行使權利依通常情形可得預期之利益，減除被侵害後行使同一權利所得利益之差額，為其所受損害。二、請求侵害人因侵害行為所得之利益。但侵害人不能證明其成本或必要費用時，以其侵害行為所得之全部收入，為其所得利益。依前項規定，如被害人不易證明其實際損害額，得請求法院依侵害情節，在新臺幣一萬元以上五十萬元以下酌定賠償額。如損害行為屬故意且情節重大者，賠償額得增至新臺幣一百萬元。
+* 88.1 依第八十四條或前條第一項請求時，對於侵害行為作成之物或主要供侵害所用之物，得請求銷燬或為其他必要之處置。
 
 * 89 被害人得請求由侵害人負擔費用，將判決書內容全部或一部登載新聞紙、雜誌。
 
-* 90 共同著作之各著作權人，對於侵害其著作權者，得各依本章之規定，請求救濟，並得按其應有部分，請求損害賠償。前項規定，於因其他關係成立之共有著作財產權或製版權之共有人，準用之。
+* 89.1 第八十五條及第八十八條之損害賠償請求權，自請求權人知有損害及賠償義務人時起，二年間不行使而消減。自有侵權行為時起，逾十年者亦同。
 
-* 91 擅自重製他人之著作者，處六月以上三年以下有期徒刑，得併科新臺幣二十萬元以下罰金；其代為重製者亦同。意圖銷售或出租而擅自重製他人著作者，處六月以上五年以下有期徒刑，得併科新臺幣三十萬元以下罰金。
+* 90 共同著作之各著作權人，對於侵害其著作權者，得各依本章之規定，請求救濟，並得按其應有部分，請求損害賠償。前項規定，於因其他關係成立之共有著作財產權或製版權之共有人準用之。
 
-* 92 擅自以公開口述、公開播送、公開上映、公開演出、公開展示、改作、出租或其他方法侵害他人之著作財產權者，處三年以下有期徒刑，得併科新臺幣十五萬元以下罰金。
+* 90.1 著作權人或製版權人對輸入或輸出侵害其著作權或製版權之物者，得申請海關先予查扣。前項申請應以書面為之，並釋明侵害之事實，及提供相當於海關核估該進口貨物完稅價格或出口貨物離岸價格之保證金，作為被查扣人因查扣所受損害之賠償擔保。申請人或被查扣人得向海關申請檢視被查扣之物。查扣之物，經申請人取得法院民事確定判決，屬侵害著作權或製版權者，由海關予以沒入。沒入物之貨櫃延滯費、倉租、裝卸費等有關費用暨處理銷燬費用應由被查扣人負擔。前項處堙銷燬所需費用，經海關限期通知繳納而不繳納者，移送法院強制執行。有下列情形之一者，除由海關撤銷查扣依有關進出口貨物通關規定辦理外，申請人並應賠償被查扣人因查扣所受之損害：一、查扣之物經法院確定判決，不屬侵害著作權或製版權之物者。二、海關於通知申請人受理查扣之日起十二日內，未被告知就查扣物為侵害物之訴訟已提起者。三、申請人申請撤銷查扣者。前項第二款規定之期限，海關得視需要延長十二日。有下列情形之一者，海關應依申請人之申請返還保證金：一、申請人取得勝訴之確定判決或與被查扣人達成和解，已無繼續提供保證金之必要者。二、撤銷查扣後，申請人證明已定二十日以上之期間，催告被查扣人行使權利而未行使者。三、被查扣人同意返還者。被查扣人就第二項之保證金，與質權人有同一之權利。
 
-* 93 有左列情形之一者，處二年以下有期徒刑，得併科新臺幣十萬元以下罰金：一、侵害第十五條至第十七條規定之著作人格權者。二、違反第七十條規定者。三、以第八十七條各款方法之一侵害他人之著作權者。
+* 90.2 前條之實施辦法，由主管機關會同財政部定之。
+
+* 91 擅自以重製之方法侵害他人之著作財產權者，處六月以上三年以下有期徒刑，得併科新臺幣二十萬元以下罰金。意圖銷售或出租而擅自以重製之方法侵害他人之著作財產權者，處六月以上五年以下有期徒刑，得併科新臺幣三十萬元以下罰金。
+
+* 92 擅自以公開口述、公開播送、公開上映、公開演出、公開展示、改作、編輯或出租之方法侵害他人之著作財產權者，處三年以下有期徒刑，得併科新臺幣十五萬元以下罰金。
+
+* 93 有下列情形之一者，處二年以下有期徒刑，得併科新臺幣十萬元以下罰金：一、侵害第十五條至第十七條規定之著作人格權者。二、違反第七十條規定者。三、以第八十七條各款方法之一侵害他人之著作權者。
 
 * 94 以犯第九十一條、第九十二條或第九十三條之罪為常業者，處一年以上七年以下有期徒刑，得併科新臺幣四十五萬元以下罰金。
 
-* 95 有左列情形之一者，處一年以下有期徒刑，得併科新臺幣五萬元以下罰金：一、違反第十八條規定者。二、侵害第七十九條規定之製版權者。三、以第八十七條各款方法之一侵害他人製版權者。
+* 95 有下列情形之一者，處一年以下有期徒刑，得併科新臺幣五萬元以下罰金：一、違反第十八條規定者。二、侵害第七十九條規定之製版權者。三、以第八十七條各款方法之一侵害他人製版權者。四、違反第一百十二條規定者。
 
 * 96 違反第五十九條第二項或第六十四條規定者，科新臺幣五萬元以下罰金。
 
-* 97 未經登記之製版物，刊有業經登記或其他同義字樣者，科新臺幣三萬元以下罰金。
+* 97 （刪除）
 
-* 98 犯第九十一條至第九十五條之罪，供犯罪所用或因犯罪所得之物，沒收之。
+* 98 （刪除）
 
 * 99 犯第九十一條至第九十五條之罪者，因被害人或其他有告訴權人之聲請，得令將判決書全部或一部登報，其費用由被告負擔。
 
-* 100 本章之罪，須告訴乃論。但第九十四條、第九十五條第一款及第九十七條之罪，不在此限。
+* 100 本章之罪，須告訴乃論。但第九十四條及第九十五條第一款之罪，不在此限。
 
-* 101 法人之代表人、法人或自然人之代理人、受雇人或其他從業人員，因執行業務，犯第九十一條至第九十七條之罪者，除依各該條規定處罰其行為人外，對該法人或自然人亦科各該條之罰金。對前項行為人、法人或自然人之一方告訴或撤回告訴者，其效力及於他方。
+* 101 法人之代表人、法人或自然人之代理人、受雇人或其他從業人員，因執行業務，犯第九十一條至第九十六條之罪者，除依各該條規定處罰其行為人外，對該法人或自然人亦科各該條之罰金。對前項行為人、法人或自然人之一方告訴或撤回告訴者，其效力及於他方。
 
 * 102 未經認許之外國法人，對於第九十一條至第九十六條之罪，得為告訴或提起自訴。
 
 * 103 司法警察官或司法警察對侵害他人之著作權或製版權，經告訴、告發者，得依法扣押其侵害物，並移送偵辦。
 
-* 104 著作權或製版權之權利人對輸入或輸出侵害其著作權或製版權之物者，得提供相當於海關核估該進口貨物完稅價格或出口貨物離岸價格之保證金，作為被查扣人因查扣所受損害之賠償擔保，申請海關先予查扣。前項查扣之物，經申請人取得法院確定判決，屬侵害著作權或製版權者，由海關予以沒入。有左列情形之一者，除由海關撤銷查扣外，申請人並應賠償被查扣人因查扣所受之損害：一、查扣之物經法院確定判決，不屬侵害著作權或製版權之物者。二、申請人於海關受理查扣之日起七日內未起訴者。三、申請人於海關受理查扣後申請撤銷查扣者。有左列情形之一者，海關應依申請人之申請返還保證金：一、提供保證金之原因消滅者。二、撤銷查扣後，申請人證明已定二十日以上之期間，催告被查扣人行使權利而未行使者。三、被查扣人同意返還者。被查扣人就第一項之保證金，與質權人有同一之權利。
+* 104 （刪除）
 
-* 105 依本法申請著作權或製版權登記者，應繳納申請費、登記費及公告費。依本法申請強制授權、調解、查閱登記簿或請求發給謄本者，應繳納申請費。前二項收費標準，由主管機關定之。
+* 105 依本法申請強制授權、製版權登記、調解、查閱製版權之登記或請求發給謄本者，應繳納規費。前項收費標準，由主管機關定之。
 
-* 106 著作合於本法修正施行前第五十條之一規定，於本法修正施行後，依修正施行前之本法，其著作權期間仍在存續中者，除本章另有規定外，適用本法規定。
+* 106 著作完成於中華民國八十一年六月十日本法修正施行前，且合於修正施行前本法第一百零六條至第一百零九條規定之一者，除本章另有規定外，適用本法。著作完成於中華民國八十一年六月十日本法修正施行後者，適用本法。
 
-* 107 著作於中華民國七十四年七月十日本法修正施行後完成者，除本章另有規定外，適用本法規定。
+* 106.1 著作完成於世界貿易組織協定在中華民國管轄區域內生效日之前，未依歷次本法規定取得著作權而依本法所定著作財產權期間計算仍在存續中者，除本章另有規定外，適用本法。但外國人著作在其源流國保護期間已屆滿者，不適用之。前項但書所稱源流國依西元一九七一年保護文學與藝術著作之伯恩公約第五條規定決定之。
 
-* 108 外國人之著作，合於本法修正施行前第十七條第一項第一款或第二款之規定而未經註冊取得著作權，有左列情形之一者，除本章另有規定外，適用本法規定：一、於中華民國七十四年七月十日本法修正施行前發行未滿二十年，依修正施行前之本法，著作權期間仍在存續中者。二、中華民國七十四年七月十日本法增訂之著作，於中華民國七十四年七月十日本法修正施行前完成，依修正施行前之本法，著作權期間仍在存續中者。三、於中華民國七十四年七月十日本法修正施行後完成者。
+* 106.2 依前條規定受保護之著作，其利用人於世界貿易組織協定在中華民國管轄區域內生效日之前，已著手利用該著作或為利用該著作已進行重大投資者，除本章另有規定外，自該生效日起二年內，得繼續利用，不適用第六章及第七章規定。
 
-* 109 本法增訂之著作，於本法修正施行前完成者，除本章另有規定外，適用本法規定。
+* 106.3 於世界貿易組織協定在中華民國管轄區域內生效日之前，就第一百零六條之一著作改作完成之衍生著作，且受歷次本法保護者，於該生效日以後，得繼續利用，不適用第六章及第七章規定。前項情形，於該生效日起滿二年後，利用人應對原著作著作財產權人支付符合該著作一般經自由磋商所應支付之使用報酬。前二項規定，對衍生著作之保護，不生影響。
 
-* 110 第十條及第十四條規定，於本法修正施行前已完成註冊之著作，不適用之。
+* 107 （刪除）
 
-* 111 第十一條及第十二條規定，對於依修正施行前本法第十條及第十一條規定取得著作權者，不適用之。
+* 108 （刪除）
 
-* 112 本法修正施行前，翻譯受修正施行前本法保護之外國人著作，如未經其著作權人同意者，於本法修正施行後，除合於第四十四條至第六十五條規定者外，不得再重製。前項翻譯之重製物，本法修正施行滿二年後，不得再行銷售。
+* 109 （刪除）
 
-* 113 依本法修正施行前第二十四條第一項規定享有之製版權，於本法修正施行後製版權未消滅者，適用第四章規定。
+* 110 第十三條規定，於中華民國八十一年六月十日本法修正施行前已完成註冊之著作，不適用之。
 
-* 114 本法修正施行前所為之著作權及製版權侵害之認定及救濟，適用行為時之規定。
+* 111 有下列情形之一者，第十一條及第十二條之規定，不適用之：一、依中華民國八十一年六月十日修正施行前本法第十條及第十一條規定取得著作權者。二、依修正施行前本法第十一條及第十二條規定取得著作權者。
+
+* 112 中華民國八十一年六月十日本法修正施行前，翻譯受中華民國八十一年六月十日修正施行前本法保護之外國人著作，如未經其著作權人同意者，於中華民國八十一年六月十日本法修正施行後，除合於第四十四條至第六十五條規定者外，不得再重製。前項翻譯之重製物，於中華民國八十一年六月十日本法修正施行滿二年後，不得再行銷售。
+
+* 113 本法修正施行前取得之製版權，適用本法規定。
+
+* 114 （刪除）
 
 * 115 本國與外國之團體或機構互訂保護著作權之協議，經行政院核准者，視為第四條所稱協定。
 
-* 116 本法施行細則，由主管機關定之。
+* 115.1 本法修正施行前著作權或製版權註冊簿或登記簿，主管機關得提供民眾閱覽。
 
-* 117 本法自公布日施行。
+* 115.2 法院為處理著作權訴訟案件，得設立專業法庭或指定專人辦理。著作權訴訟案件法院應以判決書正本乙份送主管機關。
+
+* 116 （刪除）
+
+* 117 本法自公布日施行。但第一百零六條之一至第一百零六條之三規定，自世界貿易組織協定在中華民國管轄區域內生效日起施行。
 
