原住民族教育法 1998.5.28

--- a/行政-教育/原住民族教育法.md
+++ b/行政-教育/原住民族教育法.md
@@ -1,3 +1,19 @@
+* 30 各級政府對於原住民學生應提供教育獎助，並採取適當優惠措施，以輔導其就學及就業。
+
+> 釋：為輔導原住民族學生之就學就業機會，爰明定設立各項助學措施，以鼓勵原住民族學生向學。
+
+* 31 各級主管教育行政機關對於從事原住民民族教育之學校、機構、團體及人員，其成效優良者，應予獎助。
+
+> 釋：各級主管教育行政機關為獎勵學校、機構、團體及人員參與原住民族教育事務，並提升從事原住民族教育人員之教學素質，及激勵其服務熱忱，對於成效優良者，應予獎助。
+
+* 32 本法之施行細則，由中央主管教育行政機關會同中央原住民主管機關共同訂定之。
+
+> 釋：本法施行細則之訂定機關。
+
+* 33 本法自公布日施行。
+
+> 釋：規定本法施行日期`。
+
 * 310 各級各類學校及社會教育文化機構應依據原住民族需要，結合公、私立機構及社會團體，提供原住民社會教育及文化活動機會，並加強其家庭教育。
 
 > 釋：照黨團協商條文通過。
